# machuchu

./: .gitignore  LICENSE.txt  Makefile  README.md  README.txt  cie.h  grid.f  lib.h  machachu  machuchu  main.py  mandelbrot.f  moire.f  nimbir'shtoks.f  preprocessor.py  pygl.py  pyproject.toml  shader.f  shadertoy  swirl.f  testgrid.f  updater.py  voronoi.f
shader/: color.h  dreams-0.f  dreams-0.frag  errors.f  errors.h  flameprot.f  flameprot.frag  grid.f  grid.frag  lib.h  mandelbrot.f  mandelbrot.frag  mandelbrot_dyn.f  mandelbrot_dyn.frag  mandelbrot_g1.f  mandelbrot_g2.f  mandelbrot_gs.f  mandelbrot_hq.f  mandelbrot_hq.frag  mandelbrot_m.f  mandelbrot_striped.f  mandelbrot_striped.frag  moire.f  moire.frag  mouse.frag  muster_und_abbildung.f  muster_und_abbildung.frag  nimbir'shtoks.f  nimbir'shtoks.frag  shadertoy.h  swirl.f  swirl.frag  testgrid.f  text.f  text.frag  text.h  voronoi.f  voronoi_hsv.f  voronoi_hsv.frag  voronoi_lab.f  (+1 more)
shader/shadertoy/: WdlyDM_Endless_Voronoi.f  default.f  ltSyRm_Sliding_mandelbrot.f  preamble.h
src/: MyGL.py  Qt.py  font_builder.py  main.py  preprocessor.py  updater.py
