[tool.poetry]
name = "machuchu"
version = "0.1.0"
description = ""
authors = ["yqy et al."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
pyopengl = "^3.1.7"
pyqt5 = "^5.15.9"
python = "^3.10"
qtpy = "^2.3.1"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
